--- a/src/app/home/home-page/home-page.component.html
+++ b/src/app/home/home-page/home-page.component.html
@@ -1,5 +1,34 @@
 <div class="base">
-  <button type="button" class="btn btn-primary" tooltip="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
-    Simple demo
-  </button>
+  <nav class="navbar navbar-expand-lg navbar-inverse bg-secondary">
+    <a class="navbar-brand" href="#">Brain Hack</a>
+  </nav>
+
+  <div class="body">
+    <div class="content-container">
+      <div class="title">
+        <h1 class="display-1">Wellcome to <span class="font-weight-bold">BrainHack</span></h1>
+      </div>
+      <div class="page-content">
+        <div class="page-text">
+          <p>
+            This is a new platform aiming to poplularize the Brain F*ck language. In here you will find a lot of problems to solve. There
+            are two sections of the site.<br />
+            <br />
+            The first part is the practice range. There you will be practicing simpler problems to get familiar with the lagnauge.<br />
+            <br />
+            The other section of the site contains competitions where you' ll try to solve harder problems and compare your result to other
+            people.<br />
+          </p>
+        </div>
+        <div class="page-photo">
+          <img src="../../../assets/hello-world.png" />
+        </div>
+      </div>
+    </div>
+    <div class="buttons">
+      <button class="big-button pull-right">Log In</button>
+      <button class="big-button pull-right">Register</button>
+    </div>
+    <div></div>
+  </div>
 </div>
