Activated the links to the registration and login

--- a/src/app/home/home-page/home-page.component.html
+++ b/src/app/home/home-page/home-page.component.html
@@ -26,8 +26,8 @@
       </div>
     </div>
     <div class="buttons">
-      <button class="big-button pull-right">Log In</button>
-      <button class="big-button pull-right">Register</button>
+      <button class="big-button pull-right" (click)="login()">Log In</button>
+      <button class="big-button pull-right" (click)="registration()">Register</button>
     </div>
     <div></div>
   </div>
