Extracted a nav bar component

--- a/src/app/home/home-page/home-page.component.html
+++ b/src/app/home/home-page/home-page.component.html
@@ -1,8 +1,5 @@
 <div class="base">
-  <nav class="navbar navbar-expand-lg navbar-inverse bg-secondary">
-    <a class="navbar-brand" href="#">Brain Hack</a>
-  </nav>
-
+  <app-navbar></app-navbar>
   <div class="body">
     <div class="content-container">
       <div class="title">
