--- a/src/app/core/navbar/navbar.component.css
+++ b/src/app/core/navbar/navbar.component.css
@@ -1,17 +1,33 @@
-.navbar {
+.main-navbar {
   background-color: rgb(103, 71, 92);
   color: azure;
   border-radius: 0;
-}
-
-.navbar-expand-lg {
   padding-top: 1rem;
   display: flex;
   align-items: center;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 .navbar-brand {
   margin-left: 5rem;
+  font-size: 3rem;
+  font-weight: bold;
+  color: bisque;
+}
+
+.navbar-buttons {
+  padding-right: 4rem;
+  margin-left: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.navbar-button {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  color: rgb(103, 71, 92);
+  background-color: bisque;
+  padding: 0.4rem;
+  border-radius: 0.4rem;
 }
