--- a/src/app/home/home-page/home-page.component.css
+++ b/src/app/home/home-page/home-page.component.css
@@ -1,15 +1,10 @@
 .base {
-  background: bisque no-repeat center center fixed;
-  width: 100%;
-  height: auto;
+  background-color: bisque;
   position: fixed;
-  top: 0;
-  left: 0;
-  background-size: cover;
-  opacity: 50%;
-  min-height: 100%;
-  min-width: 1024px;
+  width: 100%;
+  height: 100%;
   filter: grayscale(65%);
+  opacity: 50%;
 }
 
 .buttons {
