Fixed the results table in problem details

--- a/src/app/problems/problem-details/problem-details.component.html
+++ b/src/app/problems/problem-details/problem-details.component.html
@@ -32,7 +32,7 @@
         <div *ngIf="competitionPoints" class="result">
           <span class="result-points">Score = {{ competitionPoints }} points</span>
         </div>
-        <div *ngIf="solutionResults && solutionResults.points" class="result">
+        <div *ngIf="solutionResults" class="result">
           <span class="result-points">Score = {{ solutionResults.points }} points</span>
           <table class="test-results">
             <tr>
